# myfinalexamproject

./: .gitignore  README.md  main.py  pyproject.toml  test.py  test_main.http
.claude/: settings.local.json
app/api/: auth.py  routes.py  routes.py.bak
app/core/: config.py
app/db/: session.py
app/nlp/: tasks.py  tasks.py.bak
app/services/: agent_service.py  db_user_service.py  llm_service.py  rag_service.py
app/utils/: auth.py
crawler/: clean_data.py  merge_data.py  run_crawler.py  saihuan_spider.py  saikr_spider.py
static/css/: style.css
static/js/: app.js
task/: README.md  generate_data.py  predict.py  train.py
templates/: index.html  login.html
