[project]
name = "fastapiproject"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.32.0",
    "pydantic-settings>=2.14.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.27",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.6.2",
    "uvicorn>=0.46.0",
    "accelerate>=1.1.0",
]
