[project]
name = "fastapiproject"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.32.0",
    "pydantic-settings>=2.14.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.27",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.6.2",
    "uvicorn>=0.46.0",
    "accelerate>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "faiss-cpu>=1.13.2",
    "olefile>=0.47",
]

[tool.uv]
link-mode = "copy"
